fix border alignment on last only highlighted plan

--- a/client/my-sites/plan-features-2023-grid/style.scss
+++ b/client/my-sites/plan-features-2023-grid/style.scss
@@ -896,6 +896,13 @@ body.is-section-signup.is-white-signup .is-onboarding-2023-pricing-grid .signup_
 							}
 						}
 					}
+					// fixes border alignment
+					// on last popular plan that is only popular plan (3 column layout)
+					&.is-only-featured {
+						.plan-features-2023-grid__popular-badge {
+							padding-right: 20px;
+						}
+					}
 				}
 			}
 		}
